--- a/src/MidSurface/MidSurface.csproj
+++ b/src/MidSurface/MidSurface.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1A03AE92-4AD6-4C80-8165-F7F277F766BE}</ProjectGuid>
+    <ProjectGuid>{FA7D280E-88DF-4FC9-9387-1FB2B42F44BD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Model</RootNamespace>
-    <AssemblyName>Model</AssemblyName>
+    <RootNamespace>MidSurface</RootNamespace>
+    <AssemblyName>MidSurface</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,18 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contour.cs" />
-    <Compile Include="Curve.cs" />
-    <Compile Include="Figure.cs" />
-    <Compile Include="IContour.cs" />
-    <Compile Include="ICurve.cs" />
-    <Compile Include="IFigure.cs" />
-    <Compile Include="IModel.cs" />
-    <Compile Include="ISegment.cs" />
-    <Compile Include="Model.cs" />
-    <Compile Include="PointF.cs" />
+    <Compile Include="IMidSurface.cs" />
+    <Compile Include="MidSurface.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Segment.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{1a03ae92-4ad6-4c80-8165-f7f277f766be}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
