Update for View

--- a/src/View/View.csproj
+++ b/src/View/View.csproj
@@ -43,8 +43,10 @@
     <Compile Include="Canvas.cs" />
     <Compile Include="ICanvas.cs" />
     <Compile Include="IView.cs" />
+    <Compile Include="IVisibleData.cs" />
     <Compile Include="View.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VisibleData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MidSurface\MidSurface.csproj">
