--- a/src/Model/Model.csproj
+++ b/src/Model/Model.csproj
@@ -33,12 +33,14 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contour.cs" />
@@ -48,10 +50,8 @@
     <Compile Include="ICurve.cs" />
     <Compile Include="IFigure.cs" />
     <Compile Include="IModel.cs" />
-    <Compile Include="IPointF.cs" />
     <Compile Include="ISegment.cs" />
     <Compile Include="Model.cs" />
-    <Compile Include="PointF.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Segment.cs" />
   </ItemGroup>
