--- a/src/Solver/Solver.csproj
+++ b/src/Solver/Solver.csproj
@@ -39,22 +39,25 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Algorithm.cs" />
     <Compile Include="BisectorPointFinder.cs" />
+    <Compile Include="CustomLine.cs" />
     <Compile Include="CustomPoint.cs" />
     <Compile Include="IAlgorithm.cs" />
+    <Compile Include="ICustomLine.cs" />
     <Compile Include="ICustomPoint.cs" />
     <Compile Include="IJoinMSPoints.cs" />
     <Compile Include="IMSPointFinder.cs" />
-    <Compile Include="IPointEx.cs" />
+    <Compile Include="IMSPoint.cs" />
     <Compile Include="ISolver.cs" />
     <Compile Include="ISolverData.cs" />
     <Compile Include="ISplitter.cs" />
     <Compile Include="JoinMSPoints.cs" />
     <Compile Include="MSPointFinder.cs" />
-    <Compile Include="PointEx.cs" />
+    <Compile Include="MSPoint.cs" />
     <Compile Include="Solver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SolverData.cs" />
