--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -61,8 +61,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="ParserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SplitterTest.cs" />
     <Compile Include="ViewTest.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -73,6 +74,14 @@
     <ProjectReference Include="..\Model\Model.csproj">
       <Project>{1a03ae92-4ad6-4c80-8165-f7f277f766be}</Project>
       <Name>Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Parser\Parser.csproj">
+      <Project>{a7be69c1-1b36-45f0-8b69-1e027d1c89a2}</Project>
+      <Name>Parser</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Solver\Solver.csproj">
+      <Project>{eb8eefb4-f72a-47c4-a31b-43a9392d62c1}</Project>
+      <Name>Solver</Name>
     </ProjectReference>
     <ProjectReference Include="..\View\View.csproj">
       <Project>{f84ff65d-6e32-4f28-a922-f95793788f5b}</Project>
@@ -99,6 +108,10 @@
   </Choose>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>copy $(SolutionDir)Parser\ShapeSchema.xsd $(TargetDir)
+copy $(SolutionDir)..\doc\tests\simple\test1.xml $(TargetDir)</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
