Decorator for Model and test for Model

--- a/src/Model/Model.csproj
+++ b/src/Model/Model.csproj
@@ -52,6 +52,7 @@
     <Compile Include="IModel.cs" />
     <Compile Include="ISegment.cs" />
     <Compile Include="Model.cs" />
+    <Compile Include="MSModel.cs" />
     <Compile Include="Normal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Segment.cs" />
