--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -65,6 +65,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="GraphTest.cs" />
+    <Compile Include="MSModelTest.cs" />
     <Compile Include="ParserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SplitterTest.cs" />
