Branch with angle

--- a/src/Solver/Solver.csproj
+++ b/src/Solver/Solver.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Algorithm.cs" />
     <Compile Include="CustomLine.cs" />
     <Compile Include="CustomPoint.cs" />
+    <Compile Include="CustomSolverData.cs" />
     <Compile Include="Detailizer.cs" />
     <Compile Include="Graph.cs" />
     <Compile Include="IAlgorithm.cs" />
