Добавил стратегию получения среднего между всеми возможными путями
IAverager - в интерфейсе один метод, позволяет получить средний путь из
списка путей, состоящих из System.Windows.Points

--- a/src/Solver/Solver.csproj
+++ b/src/Solver/Solver.csproj
@@ -43,12 +43,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Algorithm.cs" />
+    <Compile Include="Averager.cs" />
     <Compile Include="CustomLine.cs" />
     <Compile Include="CustomPoint.cs" />
     <Compile Include="CustomSolverData.cs" />
     <Compile Include="Detailizer.cs" />
     <Compile Include="Graph.cs" />
     <Compile Include="IAlgorithm.cs" />
+    <Compile Include="IAverager.cs" />
     <Compile Include="ICustomLine.cs" />
     <Compile Include="ICustomPoint.cs" />
     <Compile Include="IDetailizer.cs" />
