--- a/src/Solver/Solver.csproj
+++ b/src/Solver/Solver.csproj
@@ -63,6 +63,7 @@
     <Compile Include="JoinMSPoints.cs" />
     <Compile Include="MSPointFinder.cs" />
     <Compile Include="MSPoint.cs" />
+    <Compile Include="Segments_iterator.cs" />
     <Compile Include="Solver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SolverData.cs" />
